--- a/uexVideo/AndroidManifest.xml
+++ b/uexVideo/AndroidManifest.xml
@@ -6,6 +6,12 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+     
+     <activity
+            android:name="org.zywx.wbpalmstar.plugin.uexvideo.VideoPlayerActivityForViewToWeb"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
 
 <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 <uses-permission android:name="android.permission.INTERNET"/>
