--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.zywx.wbpalmstar.widgetone.uexvideo"
+    android:installLocation="internalOnly"
     android:versionCode="1"
-    android:versionName="1.0" 
-	android:installLocation="internalOnly">
+    android:versionName="1.0" >
+
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:targetSdkVersion="16" />
+
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!-- uexVideo -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <!-- uexFileMgr -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name="org.zywx.wbpalmstar.widgetone.WidgetOneApplication"
@@ -22,22 +56,24 @@
             android:windowSoftInputMode="stateHidden|adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="appcanscheme"/>
+
+                <data android:scheme="appcanscheme" />
             </intent-filter>
         </activity>
-
-        <activity android:name="org.zywx.wbpalmstar.engine.TempActivity"
-                  android:launchMode="standard"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/browser_loading_theme"/>
-        <activity android:name="org.zywx.wbpalmstar.engine.LoadingActivity"
-                  android:configChanges="keyboardHidden|orientation"
-                  android:theme="@style/browser_loading_theme"
-                  android:screenOrientation="portrait"
-                  android:launchMode="standard"
-            >
+        <activity
+            android:name="org.zywx.wbpalmstar.engine.TempActivity"
+            android:launchMode="standard"
+            android:screenOrientation="portrait"
+            android:theme="@style/browser_loading_theme" />
+        <activity
+            android:name="org.zywx.wbpalmstar.engine.LoadingActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="standard"
+            android:screenOrientation="portrait"
+            android:theme="@style/browser_loading_theme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,10 +82,10 @@
         </activity>
         <activity
             android:name="org.zywx.wbpalmstar.plugin.uexxhsnews.MainPageActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar"
+            android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden" />
-        
+            android:theme="@android:style/Theme.Light.NoTitleBar" />
+
         <!-- uexFileMgr -->
         <activity
             android:name="org.zywx.wbpalmstar.plugin.uexfilemgr.FilexplorerActivity"
@@ -61,53 +97,22 @@
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
-        
-         <activity
+        <activity
             android:name="org.zywx.wbpalmstar.plugin.uexvideo.VideoPlayerActivityForViewToWeb"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
-		<!-- uexVideo end -->
-        
-       <receiver android:name="org.zywx.wbpalmstar.platform.analytics.PushBroadCastReceiver">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED" />
-			</intent-filter>
-		</receiver>
-		
-    </application>
+        <!-- uexVideo end -->
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="16"/>
-    
-    
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" ></uses-permission>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" ></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" ></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" ></uses-permission>
-    <uses-permission android:name="android.permission.INTERNET" ></uses-permission>
-    <uses-permission android:name="android.permission.WAKE_LOCK" ></uses-permission>
-    
-    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	
-	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_LOGS" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-	<!-- uexVideo -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-	<uses-permission android:name="android.permission.INTERNET"/>
-    <!-- uexFileMgr -->
-     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <supports-screens
-        android:anyDensity="true"
-        android:largeScreens="true"
-		android:xlargeScreens="true"
-        android:normalScreens="true"
-        android:resizeable="true"
-        android:smallScreens="true" />
+        <receiver android:name="org.zywx.wbpalmstar.platform.analytics.PushBroadCastReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name="org.zywx.wbpalmstar.plugin.uexvideo.RecordVideoActivity" android:screenOrientation="landscape" >
+        </activity>
+        <activity android:name="org.zywx.wbpalmstar.plugin.uexvideo.lib.VideoCaptureActivity"></activity>
+    </application>
 
 </manifest>
