--- a/uexVideo/AndroidManifest.xml
+++ b/uexVideo/AndroidManifest.xml
@@ -16,4 +16,10 @@
 <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!-- uexVideo -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <activity android:name="org.zywx.wbpalmstar.plugin.uexvideo.lib.VideoCaptureActivity"></activity>
+
 </manifest>
