--- a/uexVideo/plugin.xml
+++ b/uexVideo/plugin.xml
@@ -4,10 +4,10 @@
      <plugin
         className="org.zywx.wbpalmstar.plugin.uexvideo.EUExVideo"
         uexName="uexVideo" version="3.0" build="0">
-        <method name="open" />
-        <method name="createPlay" />
-        <method name="record" />
-        <method name="removePlay" />
+         <method name="open" />
+         <method name="openPlayer" />
+         <method name="record" />
+         <method name="closePlayer" />
     </plugin>
     
 </uexplugins>
