新增videoPicker选择本地视频接口

--- a/uexVideo/plugin.xml
+++ b/uexVideo/plugin.xml
@@ -8,6 +8,7 @@
          <method name="openPlayer" />
          <method name="record" />
          <method name="closePlayer" />
+         <method name="videoPicker" />
     </plugin>
     
 </uexplugins>
