--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
         jcenter()
     }
     dependencies {
@@ -12,10 +13,11 @@ buildscript {
 
 apply plugin: 'com.android.application'
 
+
 dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
-    //compile 'org.appcan:engine:+:systemRelease@aar'
-    compile(name: "engine-4.0.0-systemRelease", ext: 'aar')
+    compile 'org.appcan:engine:+:systemRelease@aar'
+    //compile(name: "engine-4.0.0-systemRelease", ext: 'aar')
 }
 
 
